test-setup/destination-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: destination
  labels:
    purpose: destination
