test-setup/destination-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: destination
  namespace: destination
spec:
  selector:
    matchLabels:
      app: destination
  template:
    metadata:
      labels:
        app: destination
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:alpine
          ports:
            - containerPort: 80
